Fixed gap in button

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ html, body{
     width: 100%;
     background-color: var(--green-500);
     display: flex;
-    gap: 5px;
+    gap: 8px;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
